deploy/kubernetes/kustomize/base/02-deployment-xero-web.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: noted-web
  name: noted-web
  namespace: apps-noted-xero
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: noted-web
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: noted-web
    spec:
      containers:
        # Version 0.4.0-rc3
        - image: phiroict/noted2xero_web@sha256:104cf978b70154c63a7749e4d1c4cfb5ec8f17593cd21afdec101a24c822c11b
          imagePullPolicy: Always
          name: noted-frontend
          resources:
            limits:
              memory: "256Mi"
              cpu: "10m"
            requests:
              memory: "128Mi"
              cpu: "10m"
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          livenessProbe:
            initialDelaySeconds: 20
            tcpSocket:
              port: 8000
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: false
          readinessProbe:
            httpGet:
              scheme: HTTP
              port: 8000
              path: healthcheck
            failureThreshold: 3
            initialDelaySeconds: 10
            timeoutSeconds: 30
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
      terminationGracePeriodSeconds: 30
