deploy/kubernetes/kustomize/base/03-deployment-xero-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: noted-frontend
  name: noted-frontend
  namespace: apps-noted-xero
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: noted-frontend
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: noted-frontend
    spec:
      containers:
        - image: nginx
          imagePullPolicy: Always
          name: noted-frontend
          livenessProbe:
            httpGet:
              port: 80
              scheme: HTTP
          resources:
            limits:
              memory: 256M
              cpu: 10m
          securityContext:
            runAsNonRoot: false
            allowPrivilegeEscalation: false
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
            - mountPath: /usr/share/nginx/html/
              name: main-page
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        runAsNonRoot: true
      terminationGracePeriodSeconds: 30
      volumes:
        - name: main-page
          configMap:
            name: main-page
