deploy/kubernetes/kustomize/base/04-service-xero-frontend.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: noted-frontend-service
  namespace: apps-noted-xero
spec:
  type: NodePort
  selector:
    app: noted-frontend
  ports:
  - port: 80
    targetPort: 8080
    name: http-xerowebport
    nodePort: 30003
